--- a/ios/jumbosmash/Base.lproj/LaunchScreen.xib
+++ b/ios/jumbosmash/Base.lproj/LaunchScreen.xib
@@ -24,7 +24,7 @@
                     </constraints>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="xPh-3z-RIV" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="fMN-42-Wtz"/>
                 <constraint firstItem="xPh-3z-RIV" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" multiplier="3:4" id="r0x-5M-VqW"/>
